add swap min limit
