# cmd/stationd/docs/swagger.json
@@ -197,7 +197,11 @@
                         "$ref": "#/definitions/station_handlers.PoolInfo"
                     }
                 },
-                "swapLimit": {
+                "swapMaxLimit": {
+                    "description": "decimals 12",
+                    "type": "string"
+                },
+                "swapMinLimit": {
                     "description": "decimals 12",
                     "type": "string"
                 }
